# warp-tui

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
examples/: demo.rs
scripts/: generate-warp-tui-desktop.sh
src/: lib.rs  main.rs
src/warp/: client.rs  error.rs  manager.rs  mod.rs  types.rs
tests/: helpers.rs  integration_test.rs  warp_test.rs
