[package]
name = "warp-tui"
version = "0.1.0"
description = "Cloudflare Zero Trust WARP Terminal UI"
authors = ["Mert Şişmanoğlu <mertssmnoglu@gmail.com>"]
license = "MIT"
edition = "2024"

[[bin]]
name = "warp-tui"
path = "src/main.rs"

[lib]
name = "warp_tui"
path = "src/lib.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
